Align secondary menu spacing with content and enforce pointer cursor on menu actions (#100)
* Initial plan

* Fix menu panel spacing and pointer cursor

* Fix AuthenticatedViewTest compilation regressions

* Polish AuthenticatedViewTest compile fix

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Ken Davidson <ken.j.davidson@live.ca>